<resources>
    <string name="app_name">MyBooks</string>
    <string name="qr_code">二维码</string>
    <string name="service">service</string>
    <string name="ottoTest">eventBus</string>
    <string name="menu3">ToTestActivity</string>
    <string name="cantact">联系人</string>


    <string name="txt_Press">出版社：%1$s</string>
    <string name="txt_Author">作者：%1$s</string>
    <string name="txt_Price">价格：%1$s</string>
    <string name="txt_Purchase">购买</string>


    <string name="txt_weixin">微信</string>
    <string name="txt_tongxunlu">通讯录</string>
    <string name="txt_faxian">发现</string>
    <string name="txt_my">我</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
