<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wanli="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ></android.support.v4.view.ViewPager>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:orientation="horizontal"
       android:background="@color/f3e1efee"
       >

       <org.wowser.evenbuspro._customview.CustomDiBu
           android:id="@+id/one"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           wanli:changeWithColor="@color/x04d5f1"
           wanli:changeWithIcon="@drawable/daily_normal"
           wanli:changeWithTextContent="@string/txt_weixin"
           wanli:changeWithTextSize="14sp"
           android:padding="3dp"
           />


       <org.wowser.evenbuspro._customview.CustomDiBu
           android:id="@+id/two"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           wanli:changeWithColor="@color/x04d5f1"
           wanli:changeWithIcon="@drawable/report_normal"
           wanli:changeWithTextContent="@string/txt_tongxunlu"
           wanli:changeWithTextSize="14sp"
           android:padding="3dp"
           />

       <org.wowser.evenbuspro._customview.CustomDiBu
           android:id="@+id/three"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           wanli:changeWithColor="@color/x04d5f1"
           wanli:changeWithIcon="@drawable/tools_normal"
           wanli:changeWithTextContent="@string/txt_faxian"
           wanli:changeWithTextSize="14sp"
           android:padding="3dp"
           />

       <org.wowser.evenbuspro._customview.CustomDiBu
           android:id="@+id/four"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           wanli:changeWithColor="@color/x04d5f1"
           wanli:changeWithIcon="@drawable/setting_normal"
           wanli:changeWithTextContent="@string/txt_my"
           wanli:changeWithTextSize="14sp"
           android:padding="3dp"
           />
   </LinearLayout>


</LinearLayout>
