<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dip"
    android:background="@color/red"
    app:cardCornerRadius="2dp"
    app:cardElevation="3dp"
    >

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/itemView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="#cccccc"
                android:contentDescription="@null"
                android:minWidth="70dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txtType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textColor="@color/red"
                        android:textSize="25sp"
                        android:paddingRight="15dp"
                        />

                    <TextView
                        android:id="@+id/txtName"
                        style="@style/Base.TextAppearance.AppCompat.Large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|left"
                        android:paddingBottom="5dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="12dp"
                        android:paddingTop="7dp"
                        android:singleLine="true"
                        tools:text="Android 开发艺术探索"
                        />

                    <TextView
                        android:id="@+id/txtPress"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|left"
                        android:paddingBottom="2dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="2dp"
                        android:singleLine="true"
                        tools:text="@string/txt_Press" />

                    <TextView
                        android:id="@+id/txtPrice"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|left"
                        android:paddingBottom="2dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="2dp"
                        android:singleLine="true"
                        tools:text="@string/txt_Price" />

                    <TextView
                        android:id="@+id/txtAuthor"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|left"
                        android:paddingBottom="2dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="2dp"
                        android:singleLine="true"
                        android:textColor="@color/red"
                        tools:text="@string/txt_Author" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>
</android.support.v7.widget.CardView>